Removing corrupted characters and fixing minor bugs

--- a/adjectivedeclensions.html
+++ b/adjectivedeclensions.html
@@ -78,15 +78,15 @@
       </tr>
       <tr>
         <td>Genitive</td>
-        <td>bonÄ«</td><td>bonae</td><td>bonÄ«</td>
+        <td>bonī</td><td>bonae</td><td>bonī</td>
         <td>tristis</td><td>tristis</td>
         <td>ingentis</td><td>ingentis</td>
       </tr>
       <tr>
         <td>Dative</td>
-        <td>bonÅ</td><td>bonae</td><td>bonÅ</td>
-        <td>tristÄ«</td><td>tristÄ«</td>
-        <td>ingentÄ«</td><td>ingentÄ«</td>
+        <td>bonō</td><td>bonae</td><td>bonō</td>
+        <td>tristī</td><td>tristī</td>
+        <td>ingentī</td><td>ingentī</td>
       </tr>
       <tr>
         <td>Accusative</td>
@@ -96,43 +96,42 @@
       </tr>
       <tr>
         <td>Ablative</td>
-        <td>bonÅ</td><td>bonÄ</td><td>bonÅ</td>
-        <td>tristÄ«</td><td>tristÄ«</td>
-        <td>ingentÄ«</td><td>ingentÄ«</td>
+        <td>bonō</td><td>bonā</td><td>bonō</td>
+        <td>tristī</td><td>tristī</td>
+        <td>ingentī</td><td>ingentī</td>
       </tr>
   
       <!-- PLURAL -->
       <tr><td colspan="8" style="text-align:center;"><b>PLURAL</b></td></tr>
       <tr>
         <td>Nominative</td>
-        <td>bonÄ«</td><td>bonae</td><td>bona</td>
-        <td>tristÄ“s</td><td>tristia</td>
-        <td>ingentÄ“s</td><td>ingentia</td>
+        <td>bonī</td><td>bonae</td><td>bona</td>
+        <td>tristēs</td><td>tristia</td>
+        <td>ingentēs</td><td>ingentia</td>
       </tr>
       <tr>
         <td>Genitive</td>
-        <td>bonÅrum</td><td>bonÄrum</td><td>bonÅrum</td>
+        <td>bonōrum</td><td>bonārum</td><td>bonōrum</td>
         <td>tristium</td><td>tristium</td>
         <td>ingentium</td><td>ingentium</td>
       </tr>
       <tr>
         <td>Dative</td>
-        <td>bonÄ«s</td><td>bonÄ«s</td><td>bonÄ«s</td>
+        <td>bonīs</td><td>bonīs</td><td>bonīs</td>
         <td>tristibus</td><td>tristibus</td>
         <td>ingentibus</td><td>ingentibus</td>
       </tr>
       <tr>
         <td>Accusative</td>
-        <td>bonÅs</td><td>bonÄs</td><td>bona</td>
-        <td>tristÄ“s</td><td>tristia</td>
-        <td>ingentÄ“s</td><td>ingentia</td>
+        <td>bonōs</td><td>bonās</td><td>bona</td>
+        <td>tristēs</td><td>tristia</td>
+        <td>ingentēs</td><td>ingentia</td>
       </tr>
       <tr>
         <td>Ablative</td>
-        <td>bonÄ«s</td><td>bonÄ«s</td><td>bonÄ«s</td>
+        <td>bonīs</td><td>bonīs</td><td>bonīs</td>
         <td>tristibus</td><td>tristibus</td>
         <td>ingentibus</td><td>ingentibus</td>
       </tr>
     </tbody>
   </table>
-  
