--- a/firstdeclension.html
+++ b/firstdeclension.html
@@ -65,25 +65,25 @@
 <tr>
     <td>Genetive</td>
     <td>ae</td>
-    <td>Ärum</td>
+    <td>ārum</td>
 
 </tr>
 <tr>
     <td>Dative</td>
     <td>ae</td>
-    <td>Ä«s</td>
+    <td>īs</td>
 
 </tr>
 <tr>
     <td>Accusative</td>
     <td>am</td>
-    <td>Äs</td>
+    <td>ās</td>
 
 </tr>
 <tr>
     <td>Ablative</td>
-    <td>Ä</td>
-    <td>Ä«s</td>
+    <td>ā</td>
+    <td>īs</td>
 
 </tr>
 </table>
