--- a/infinitiveuses.html
+++ b/infinitiveuses.html
@@ -64,12 +64,12 @@
 </tr>
 <tr>
     <td>Subject</td>
-    <td><u>amÄre</u> est humanum</td>
+    <td><u>amāre</u> est humanum</td>
 
 </tr>
 <tr>
     <td>Indirect Statement</td>
-    <td>Puella dÄ«cit puerum <u>venÄ«re</u></td>
+    <td>Puella dīcit puerum <u>venīre</u></td>
 
 </tr>
 </table>
