--- a/p.p.help.html
+++ b/p.p.help.html
@@ -36,11 +36,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>dux, ab hoste vulnerÄtus, ad urbem revÄ“nit</td>
+        <td>dux, ab hoste vulnerātus, ad urbem revēnit</td>
         <td>the leader, [having been] wounded by the enemy, returned to the city</td>
       </tr>
       <tr>
-        <td>dux, gladiÅ vulnerÄtus, ad urbem revÄ“nit</td>
+        <td>dux, gladiō vulnerātus, ad urbem revēnit</td>
         <td>The leader, [having been] wounded by the sword, returned to the city</td>
       </tr>
     </tbody>
