--- a/passiveindicative.html
+++ b/passiveindicative.html
@@ -58,7 +58,7 @@
         <td>1st person</td><td>r</td><td>mur</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>ris</td><td>minÄ«</td>
+        <td>2nd Person</td><td>ris</td><td>minī</td>
     </tr>
     <tr>
         <td>3rd Person</td><td>tur</td><td>ntur</td>
@@ -75,7 +75,7 @@
         <td>1st person</td><td>bor</td><td>bimur</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>beris</td><td>biminÄ«</td>
+        <td>2nd Person</td><td>beris</td><td>biminī</td>
     </tr>
     <tr>
         <td>3rd Person</td><td>bitur</td><td>buntur</td>
@@ -89,13 +89,13 @@
         </tr>
     </thead>
     <tr>
-        <td>1st person</td><td>bar</td><td>bÄmur</td>
+        <td>1st person</td><td>bar</td><td>bāmur</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>bÄris</td><td>bÄminÄ«</td>
+        <td>2nd Person</td><td>bāris</td><td>bāminī</td>
     </tr>
     <tr>
-        <td>3rd Person</td><td>bÄtur</td><td>bantur</td>
+        <td>3rd Person</td><td>bātur</td><td>bantur</td>
     </tr>
 </table>   
 
@@ -106,13 +106,13 @@
         </tr>
     </thead>
     <tr>
-        <td>1st person</td><td>-tus sum</td><td>-Ä« sumus</td>
+        <td>1st person</td><td>-tus sum</td><td>-ī sumus</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>-tus es</td><td>-Ä« estis</td>
+        <td>2nd Person</td><td>-tus es</td><td>-ī estis</td>
     </tr>
     <tr>
-        <td>3rd Person</td><td>-tus est</td><td>-Ä« sunt</td>
+        <td>3rd Person</td><td>-tus est</td><td>-ī sunt</td>
     </tr>
 </table>  
 
@@ -123,13 +123,13 @@
         </tr>
     </thead>
     <tr>
-        <td>1st person</td><td>-tus erÅ</td><td>-Ä« erimus</td>
+        <td>1st person</td><td>-tus erō</td><td>-ī erimus</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>-tus eris</td><td>-Ä« eritis</td>
+        <td>2nd Person</td><td>-tus eris</td><td>-ī eritis</td>
     </tr>
     <tr>
-        <td>3rd Person</td><td>-tus erit</td><td>-Ä« erunt</td>
+        <td>3rd Person</td><td>-tus erit</td><td>-ī erunt</td>
     </tr>
 </table>  
 
@@ -140,12 +140,12 @@
         </tr>
     </thead>
     <tr>
-        <td>1st person</td><td>-tus eram</td><td>-Ä« erÄmus</td>
+        <td>1st person</td><td>-tus eram</td><td>-ī erāmus</td>
     </tr>
     <tr>
-        <td>2nd Person</td><td>-tus erÄs</td><td>-Ä« erÄtis</td>
+        <td>2nd Person</td><td>-tus erās</td><td>-ī erātis</td>
     </tr>
     <tr>
-        <td>3rd Person</td><td>-tus erat</td><td>-Ä« erant</td>
+        <td>3rd Person</td><td>-tus erat</td><td>-ī erant</td>
     </tr>
 </table>
