--- a/seconddeclension.html
+++ b/seconddeclension.html
@@ -70,7 +70,7 @@
 <tr>
     <td>Nominative</td>
     <td>us</td>
-    <td>Ä«</td>
+    <td>ī</td>
     <th> </th>
     <td>um</td>
     <td>a</td>
@@ -78,26 +78,26 @@
 </tr>
 <tr>
     <td>Genetive</td>
-    <td>Ä«</td>
-    <td>Årum</td>
+    <td>ī</td>
+    <td>ōrum</td>
     <th> </th>
-    <td>Ä«</td>
-    <td>Årum</td>
+    <td>ī</td>
+    <td>ōrum</td>
 
 </tr>
 <tr>
     <td>Dative</td>
-    <td>Å</td>
-    <td>Ä«s</td>
+    <td>ō</td>
+    <td>īs</td>
     <th> </th>
-    <td>Å</td>
-    <td>Ä«s</td>
+    <td>ō</td>
+    <td>īs</td>
 
 </tr>
 <tr>
     <td>Accusative</td>
     <td>um</td>
-    <td>Ås</td>
+    <td>ōs</td>
     <th> </th>
     <td>um</td>
     <td>a</td>
@@ -105,11 +105,11 @@
 </tr>
 <tr>
     <td>Ablative</td>
-    <td>Å</td>
-    <td>Ä«s</td>
+    <td>ō</td>
+    <td>īs</td>
     <th> </th>
-    <td>Å</td>
-    <td>Ä«s</td>
+    <td>ō</td>
+    <td>īs</td>
 
 </tr>
 </table>
