--- a/typesofadjectives.html
+++ b/typesofadjectives.html
@@ -70,14 +70,14 @@
         <td><b>pulcherrimus</b><br>most beautiful, very beautiful</td>
       </tr>
       <tr>
-        <td><b>trÄ«stis</b><br>sad</td>
-        <td><b>trÄ«stior</b><br>sadder</td>
-        <td><b>trÄ«stissimus</b><br>saddest, very sad</td>
+        <td><b>trīstis</b><br>sad</td>
+        <td><b>trīstior</b><br>sadder</td>
+        <td><b>trīstissimus</b><br>saddest, very sad</td>
       </tr>
       <tr>
-        <td><b>dÄ«ves</b><br>rich</td>
-        <td><b>dÄ«vitior</b><br>richer</td>
-        <td><b>dÄ«vitissimus</b><br>richest, very rich</td>
+        <td><b>dīves</b><br>rich</td>
+        <td><b>dīvitior</b><br>richer</td>
+        <td><b>dīvitissimus</b><br>richest, very rich</td>
       </tr>
       <tr>
         <td><b>facilis</b><br>easy</td>
