--- a/useofcases.html
+++ b/useofcases.html
@@ -77,13 +77,13 @@
                 </tr>
         </thead>
         <tr>
-            <td>The nominative case usually denotes the subject of a verb</td><td><u>Philosophia</u> animum fÅrmat <br> 
+            <td>The nominative case usually denotes the subject of a verb</td><td><u>Philosophia</u> animum fōrmat <br> 
                 <i><u>Philosophy</u> shapes the mind</i><br><br>
-                Occidit <u>brevis lÅ«x</u> <br>
+                Occidit <u>brevis lūx</u> <br>
             <i><u>The brief light</u> dies</i></td>
         </tr>
         <tr>
-            <td>The nominative can also denote the complement</td><td>deus <u>rÄ“ctor</u> est <br>
+            <td>The nominative can also denote the complement</td><td>deus <u>rēctor</u> est <br>
             <i>god is <u>the ruler</u></i></td>
         </tr>
 
@@ -99,44 +99,44 @@
               </tr>
       </thead>
       <tr>
-          <td>The genitive case typically denotes the possessor of something</td><td><u>ÅŒrÄ«onis</u> Ä“nsem<br> 
+          <td>The genitive case typically denotes the possessor of something</td><td><u>Ōrīonis</u> ēnsem<br> 
               <i><u>Orion's</u> sword</i><br><br>
               Ex urbe <u>hostium</u> <br>
           <i>From the city<u>of the enemy</u></i></td>
       </tr>
       <tr>
-          <td> Genitive of description (= genitive of quality) â€“ denotes a particular quality of something</td><td>armillÄs <u>magnÄ« ponderis</u><br>
+          <td> Genitive of description (= genitive of quality) denotes a particular quality of something</td><td>armillās <u>magnī ponderis</u><br>
           <i>braceletes <u>of great weight</u></i></td>
       </tr>
       <tr>
-        <td>Genitive of quantity (= partitive genitive) â€“ denotes the whole, of which something is a part</td><td> NÅn multum <u>malÄ«</u><br> 
+        <td>Genitive of quantity (= partitive genitive) denotes the whole, of which something is a part</td><td> nōn multum <u>malī</u><br> 
             <i>Not much<u>evil</u></i><br><br>
-            <u>prÅvinciÄlium</u> validissimÄ«s<br>
+            <u>prōvinciālium</u> validissimīs<br>
         <i>the strongest <u>of the provincial inhabitants</u></i></td>
     </tr>
     <tr>
-      <td>Genitive of value â€“ denotes the value of something, particularly after verbs of estimating and valuing</td><td>omnÄ“s <u>Å«nius</u> aestimÄ“mus <u>assis</u><br> 
+      <td>Genitive of value denotes the value of something, particularly after verbs of estimating and valuing</td><td>omnēs <u>ūnius</u> aestimēmus <u>assis</u><br> 
           <i>let us value them all at a <u>single penny</u></i><br><br>
-          aliÄs haud <u>magnÄ«</u> facere<br>
+          aliās haud <u>magnī</u> facere<br>
       <i>he was not <u>much</u> concerned about the others</i></td>
   </tr>
   <tr>-
-    <td>Objective genitive â€“ denotes what would be the object, if the phrase were expressed by a verb (he desires the sky, they 
-      compete for honor)</td><td><u>caelÄ«</u> cupÄ«dine<br> 
+    <td>Objective genitive denotes what would be the object, if the phrase were expressed by a verb (he desires the sky, they 
+      compete for honor)</td><td><u>caelī</u> cupīdine<br> 
         <i>by desire for the <u>sky</u></i><br><br>
-        <u>honÅris</u> aemulÄtiÅ<br>
+        <u>honōris</u> aemulātiō<br>
     <i>competition for <u>honor</u></i></td>
 </tr>
 <tr>
-  <td>With words of remembering and forgetting</td><td>nec mÄ“ meminisse pigÄ“bit <u>Elissae</u><br> 
+  <td>With words of remembering and forgetting</td><td>nec mē meminisse pigēbit <u>Elissae</u><br> 
       <i>nor will it displease me to remember <u>Elissa</u></i><br><br>
-      <u>nostrÄ«</u> memorem <u>lÅ«ctÅ«s</u><br>
+      <u>nostrī</u> memorem <u>lūctūs</u><br>
   <i>commemorative <u>of our grief</u></i></td>
 </tr>
 <tr>
-  <td>With other verbs and adjectives</td><td>hominÄ“s <u>bellandÄ«</u> cupidÄ«<br> 
+  <td>With other verbs and adjectives</td><td>hominēs <u>bellandī</u> cupidī<br> 
     <i>men desirous <u>of making war</u></i><br><br>
-    <u>frÅ«gis</u> egentÄ“s</u><br>
+    <u>frūgis</u> egentēs</u><br>
 <i>lacking <u>grain</u></i></td>
 </tr>
 
@@ -153,65 +153,65 @@
       </thead>
       <tr>
           <td>The dative case typically denotes the indirect object, i.e. beneficiary or recipient, of an action, and is often translated 
-            to or for</td><td>Dedit Åscula <u>nÄtÅ</u><br> 
+            to or for</td><td>Dedit ōscula <u>nātō</u><br> 
               <i>He gave kisses <u>to his son</u></i><br><br>
               Convehunt omnia <u>gulae</u><br>
           <i>they gather everything <u>for their appetite</u></i></td>
       </tr>
       <tr>
-        <td> Dative of agent â€“ denotes the agent of a passive verb (instead of Ä/ab + ablative) or a periphrastic passive verb</td><td><u>Omnibus</u> ille diÄ“s <u>nÅbÄ«s</u> nÄtÄlis agÄtur<br> 
+        <td> Dative of agent denotes the agent of a passive verb (instead of ā/ab + ablative) or a periphrastic passive verb</td><td><u>Omnibus</u> ille diēs <u>nōbīs</u> nātālis agātur<br> 
             <i>let that birthday be celebrated <u>by all of us</u></i><br><br>
-            ego, quÄ« nÅn intellegor <u>Å«llÄ«</u><br>
+            ego, quī nōn intellegor <u>ūllī</u><br>
         <i>I, who am not understood by <u>anyone</u></i><br><br>
-        ubi diÅ«tius <u>nÅbÄ«s</u> habitandum est <br>
+        ubi diūtius <u>nōbīs</u> habitandum est <br>
         <i>where <u>we</u> must live for a longer time</i>
       </td>
     </tr>
     <tr>
-      <td>Dative of possession â€“ denotes the person to whom something belongs</td>
+      <td>Dative of possession denotes the person to whom something belongs</td>
       <td>Quicquid erit, erit <u>tibi</u><br> 
         <i>whatever there will be, will be <u>yours</u></i><br><br>
-      <u>Cui</u> digitÄ« pinguÄ“s erit <br>
+      <u>Cui</u> digitī pinguēs erit <br>
         <i><u>Whose</u> fingers will be fat</i></td>
   </tr>
   <tr>
-    <td> Dative of purpose â€“ denotes the purpose of an action</td><td><u>Omnibus</u>Terra <u>dÄ«vitiÄ«s</u> foditur<br> 
+    <td> Dative of purpose denotes the purpose of an action</td><td><u>Omnibus</u>Terra <u>dīvitiīs</u> foditur<br> 
         <i>the earth is dug into <u>for wealth</u></i><br><br>
-        CollÄ“ctam <u>exsiliÅ</u> pÅ«bem<br>
+        collēctam <u>exsiliō</u> pūbem<br>
     <i>young people assembled <u>for exile</u></i><br><br>
-    Å«niversÅs <u>cÅ«rae</u> habuit <br>
+    ūniversōs <u>cūrae</u> habuit <br>
     <i>He treated them all <u>considerately</u></i>
   </td>
 </tr>
 <tr>
-  <td> Dative of reference â€“ often denotes the person with whom an opinion is associated</td>
+  <td> Dative of reference often denotes the person with whom an opinion is associated</td>
   <td>omnia <u>mihi</u> tempora sunt misera <br> 
     <i><u>for me</u> all the times are wretched</i>
 </tr>
 <tr>
-  <td> Dative of result â€“ denotes the result of a situation</td>
-  <td>negÅtium <u>laetitiae</u> fuit potius quam <u>timÅrÄ«</u><br> 
+  <td> Dative of result denotes the result of a situation</td>
+  <td>negōtium <u>laetitiae</u> fuit potius quam <u>timōrī</u><br> 
     <i>the affair was a reason <u>for rejoicing</u> rather than <u>fear</u></i>
 </tr>
 <tr>
-  <td>Dative of separation â€“ particularly with reference to people</td>
-  <td><u>mihi</u> nÅ«men Ä“ripuit mentem<br> 
+  <td>Dative of separation particularly with reference to people</td>
+  <td><u>mihi</u> nūmen ēripuit mentem<br> 
     <i>a divine power snatched my mind from <u>me</u></i><br><br>
-    nÄ“ sit pÄx adÄ“mpta <u>mihi</u><br>
+    nē sit pāx adēmpta <u>mihi</u><br>
     <i>lest peace be taken away from <u>me</u></i></td>
 </tr>
 <tr>
-  <td> Double dative â€“ combining a dative of purpose or result with a dative of reference</td>
-  <td>erit <u>mihi</u> <u>cÅ«rae</u><br> 
+  <td> Double dative combining a dative of purpose or result with a dative of reference</td>
+  <td>erit <u>mihi</u> <u>cūrae</u><br> 
     <i>it will be for a concern <u>to me</u> (= I will take care)</i><br><br>
-    quid aliud <u>exitiÅ</u> <u>LacedaemoniÄ«s et AthÄ“niÄ“nsibus</u> fuit?<br>
+    quid aliud <u>exitiō</u> <u>Lacedaemoniīs et Athēniēnsibus</u> fuit?<br>
     <i>what other thing caused the <u>destruction</u> of <u>the Spartans and Athenians</u>?</i></td>
 </tr>
 <tr>
-  <td> With compound verbs and some other verbs, including crÄ“dÅ, imperÅ, suÄdeÅ</td>
-  <td><u>omnibus</u> incutiÄ“ns amÅrem<br> 
+  <td> With compound verbs and some other verbs, including crēdō, imperō, suādeō</td>
+  <td><u>omnibus</u> incutiēns amōrem<br> 
     <i>instilling love in <u>all</u></i><br><br>
-    <u>tÄ“ctÄ«s</u> succÄ“dite <u>nostrÄ«s</u> <br>
+    <u>tēctīs</u> succēdite <u>nostrīs</u> <br>
     <i>enter <u>our</u> <u>houses</u></i></td>
   </tr>
   </table>
@@ -228,39 +228,39 @@
     <tr>
       <td>The accusative case denotes the direct object of a verb</td>
       <td>
-        Åtium et rÄ“gÄ“s et beÄtÄs <u>urbÄ“s</u> perdidit<br>
+        ōtium et rēgēs et beātās perdidit <u>urbēs</u><br>
         <i>leisure has destroyed both kings and prosperous <u>cities</u></i><br><br>
-        philosophia <u>animum</u> fÅrmat<br>
+        philosophia <u>animum</u> fōrmat<br>
         <i>philosophy shapes the <u>mind</u></i>
       </td>
     </tr>
     <tr>
-      <td>Accusative of respect â€“ specifies that to which an adjective or participle applies</td>
+      <td>Accusative of respect specifies that to which an adjective or participle applies</td>
       <td>
-        nÅ«dus <u>membra</u><br>
+        nūdus <u>membra</u><br>
         <i>naked in regard to his <u>limbs</u> (= bare-limbed)</i>
       </td>
     </tr>
     <tr>
-      <td>Accusative of time â€“ denotes how long something lasts</td>
+      <td>Accusative of time denotes how long something lasts</td>
       <td>
-        apud Flaccum <u>diÄ“s xiii</u> fuimus<br>
-        <i>I have been at Flaccusâ€™ house for <u>thirteen days</u></i>
+        apud Flaccum <u>diēs xiii</u> fuimus<br>
+        <i>I have been at Flaccus' house for <u>thirteen days</u></i>
       </td>
     </tr>
     <tr>
       <td>In indirect statements, the accusative is used to denote the subject of the infinitive</td>
       <td>
-        rÅ«mÅrÄ“s diffÅ«dÄ“runt <u>gentÄ“s arctÅÄs</u> cÄsÅ«s versÄre<br>
+        rūmōrēs diffūdērunt <u>gentēs arctōās</u> cāsūs versāre<br>
         <i>rumors spread that the <u>peoples in the north</u> were stirring up troubles</i>
       </td>
     </tr>
     <tr>
-      <td>With certain prepositions â€“ including ad, apud, in, per, post, prope, trÄns</td>
+      <td>With certain prepositions including ad, apud, in, per, post, prope, trāns</td>
       <td>
-        <u>trÄns RhÄ“num</u><br>
+        <u>trāns Rhēnum</u><br>
         <i><u>across the Rhine</u></i><br><br>
-        <u>celerÄ“s per aurÄs</u><br>
+        <u>celerēs per aurās</u><br>
         <i><u>through the swift breezes</u></i>
       </td>
     </tr>
@@ -280,124 +280,124 @@
         achieved. It is often represented in English using in, from, with, or by.</td><td></td>
     </tr>
     <tr>
-      <td>Ablative absolute â€“ providing context or information grammatically separate from the rest of the sentence</td>
+      <td>Ablative absolute providing context or information grammatically separate from the rest of the sentence</td>
       <td>
-        salÅ«te datÄ in vicem redditÄque<br>
+        salūte datā in vicem redditāque<br>
         <i>once a greeting had been given and received</i><br><br>
         palam, <u>spectantibus omnibus</u><br>
         <i>openly, while <u>everyone was watching</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of agent â€“ denotes the agent of a passive verb (usually with Ä/ab)</td>
+      <td>Ablative of agent denotes the agent of a passive verb (usually with ā/ab)</td>
       <td>
-        multÄ« <u>Ä mÄ“</u> virÄ« praedicÄrentur<br>
+        multī <u>ā mē</u> virī praedicārentur<br>
         <i>many men might be named <u>by me</u></i><br><br>
-        iussus est <u>ab HilariÄnÅ</u> prÅicÄ«<br>
+        iussus est <u>ab Hilariānō</u> prōicī<br>
         <i>he was ordered <u>by Hilarian</u> to be thrown out</i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of cause â€“ denotes the cause of an action</td>
+      <td>Ablative of cause denotes the cause of an action</td>
       <td>
-        <u>similitÅ«dine vÄ«tae et spÄ“ eiusdem licentiae</u><br>
+        <u>similitūdine vītae et spē eiusdem licentiae</u><br>
         <i><u>because of the similarity</u> of their way of life and their hope of the same license</i><br><br>
-        id <u>hÅc</u> facilius eÄ«s persuÄsit<br>
+        id <u>hōc</u> facilius eīs persuāsit<br>
         <i>he persuaded them more easily <u>because of this</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of comparison â€“ as an alternative to *quam*</td>
+      <td>Ablative of comparison as an alternative to *quam*</td>
       <td>
         dulcius <u>urbe</u> quid est?<br>
         <i>what is more pleasant than the <u>city</u>?</i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of degree of difference â€“ with comparatives</td>
+      <td>Ablative of degree of difference with comparatives</td>
       <td>
-        <u>paulÅ</u> plÄ“niÅre<br>
+        <u>paulō</u> plēniōre<br>
         <i><u>a little</u> more full</i><br><br>
-        <u>multÅ</u> inÄ«quiÅre<br>
+        <u>multō</u> inīquiōre<br>
         <i><u>much</u> more unjust</i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of description â€“ describes a quality or characteristic</td>
+      <td>Ablative of description describes a quality or characteristic</td>
       <td>
-        fuisse trÄditur <u>colÅre candidÅ</u><br>
+        fuisse trāditur <u>colōre candidō</u><br>
         <i>he is said to have been <u>of fair complexion</u></i><br><br>
-        <u>parilÄ« aetÄte</u> PhilÄ“mÅn<br>
+        <u>parilī aetāte</u> Philēmōn<br>
         <i>Philemon, <u>equally old</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of instrument â€“ denotes the means with which something is achieved</td>
+      <td>Ablative of instrument denotes the means with which something is achieved</td>
       <td>
-        teguntur <u>lÅ«mina nocte</u><br>
+        teguntur <u>lūmina nocte</u><br>
         <i>my eyes are covered <u>by darkness</u></i><br><br>
-        Åraque caeruleÄ <u>aquÄ</u> excipiuntur<br>
+        ōraque caeruleā <u>aquā</u> excipiuntur<br>
         <i>his mouth is received <u>by the blue-gray water</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of place â€“ denotes where something happens (usually with a preposition)</td>
+      <td>Ablative of place denotes where something happens (usually with a preposition)</td>
       <td>
-        <u>fornÄcibus</u> ignis anhÄ“lat<br>
+        <u>fornācibus</u> ignis anhēlat<br>
         <i><u>in the furnaces</u> the fire emits a hot blast</i><br><br>
-        <u>illÄ casÄ</u> cÅnsenuÄ“re<br>
+        <u>illā</u> cōnsenuēre <u>casā</u><br>
         <i>they had grown old <u>in that cottage</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of price â€“ denotes the specific cost of an item</td>
+      <td>Ablative of price denotes the specific cost of an item</td>
       <td>
-        cum <u>quÄ«nque sÄ“stertiÄ«s</u> Ä“misset piscem<br>
+        cum <u>quīnque sēstertiīs</u> ēmisset piscem<br>
         <i>since he had bought the fish <u>for five thousand sesterces</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of separation â€“ denotes separation (often with a preposition)</td>
+      <td>Ablative of separation denotes separation (often with a preposition)</td>
       <td>
-        quae numquam potest <u>dÄ“movÄ“rÄ« locÅ</u><br>
+        quae numquam potest <u>dēmovērī locō</u><br>
         <i>which can never be moved <u>from its place</u></i><br><br>
-        ut dÄ“mÄtur <u>ÅtiÅ</u> nausea<br>
+        ut dēmātur <u>ōtiō</u> nausea<br>
         <i>so that tedium may be removed <u>from leisure</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of specification â€“ specifies a quality or state (also called ablative of respect)</td>
+      <td>Ablative of specification specifies a quality or state (also called ablative of respect)</td>
       <td>
-        animÄ«s opibusque parÄtÄ«<br>
+        animīs opibusque parātī<br>
         <i>ready <u>in their spirits and resources</u></i><br><br>
-        HelvÄ“tiÄ« reliquÅs GallÅs <u>virtÅ«te</u> praecÄ“dunt<br>
+        Helvētiī reliquōs Gallōs <u>virtūte</u> praecēdunt<br>
         <i>the Helvetii surpass the remaining Gauls <u>in virtue</u></i>
       </td>
     </tr>
     <tr>
-      <td>Ablative of time â€“ denotes when or within which something happens</td>
+      <td>Ablative of time denotes when or within which something happens</td>
       <td>
-        QuÄ«nctius <u>sextÅ decimÅ diÄ“</u> sÄ“ abdicÄvit<br>
+        quīnctius <u>sextō decimō diē</u> sē abdicāvit<br>
         <i>Cincinnatus resigned <u>on the sixteenth day</u></i><br><br>
-        innumerÄbilia accidunt <u>singulÄ«s hÅrÄ«s</u><br>
+        innumerābilia accidunt <u>singulīs hōrīs</u><br>
         <i>countless things happen <u>every hour</u></i>
       </td>
     </tr>
     <tr>
-      <td>With certain prepositions â€“ including Ä/ab, cum, Ä“/ex, in, prÅ, sine</td>
+      <td>With certain prepositions including ā/ab, cum, ē/ex, in, prō, sine</td>
       <td>
-        <u>ex nostrÄ prÅvinciÄ</u><br>
+        <u>ex nostrā prōvinciā</u><br>
         <i><u>from our province</u></i><br><br>
-        <u>prÅ aureÄ«s dÅnÄ«s</u><br>
+        <u>prō aureīs dōnīs</u><br>
         <i><u>instead of golden gifts</u></i>
       </td>
     </tr>
     <tr>
-      <td>With certain verbs â€“ including potior, Å«tor, fruor, fungor, vÄ“scor</td>
+      <td>With certain verbs including potior, ūtor, fruor, fungor, vēscor</td>
       <td>
-        <u>vÄ“scimur bÄ“stiÄ«s</u><br>
+        <u>vēscimur bēstiīs</u><br>
         <i><u>we feed on wild beasts</u></i><br><br>
-        dentibus atque comÄ«s <u>Å«teris</u> Ä“mptÄ«s<br>
+        dentibus atque comīs <u>ūteris</u> ēmptīs<br>
         <i>you <u>use</u> bought teeth and hair</i>
       </td>
     </tr>
@@ -416,9 +416,9 @@
     <tr>
       <td> The vocative case is used for direct address</td>
       <td>
-        <u>Attice</u>, crÄ“de mihi <br>
+        <u>Attice</u>, crēde mihi <br>
         <i><u>Atticus</u>, believe me</i><br><br>
-        Å <u>fÅns</u> Bandusiae<br>
+        ō <u>fōns</u> Bandusiae<br>
         <i>o <u>spring</u> of Bandusia</i>
       </td>
     </tr>
@@ -436,9 +436,9 @@
     <tr>
       <td>The locative case denotes the place where something happens</td>
       <td>
-        ut <u>AlexandrÄ«ae</u> contigit <br>
+        ut <u>Alexandrīae</u> contigit <br>
         <i>as happened at <u>Alexandria</u></i><br><br>
-        <u>domÄ«</u> nihil erat<br>
+        <u>domī</u> nihil erat<br>
         <i>there was nothing at <u>home</u></i>
       </td>
     </tr>
