--- a/activeindicative.html
+++ b/activeindicative.html
@@ -57,7 +57,7 @@
         </tr>
     </thead>
     <tr>
-        <td>1st Person</td><td>Å</td><td>mus</td>
+        <td>1st Person</td><td>ō</td><td>mus</td>
     </tr>
     <tr>
         <td>2nd Person</td><td>s</td><td>tis</td>
@@ -74,7 +74,7 @@
         </tr>
     </thead>
     <tr>
-        <td>1st Person</td><td>bÅ</td><td>bimus</td>
+        <td>1st Person</td><td>bō</td><td>bimus</td>
     </tr>
     <tr>
         <td>2nd Person</td><td>bis</td><td>bitis</td>
@@ -92,10 +92,10 @@
     </thead>
 
 <tr>
-          <td>1st Person</td><td>bam</td><td>bÄmus</td>
+          <td>1st Person</td><td>bam</td><td>bāmus</td>
     </tr>
 <tr>
-          <td>2nd Person</td><td>bÄs</td><td>bÄtis</td>
+          <td>2nd Person</td><td>bās</td><td>bātis</td>
     </tr>
 <tr>
           <td>3rd Person</td><td>bat</td><td>bant</td>
@@ -110,13 +110,13 @@
     </thead>
 
 <tr>
-          <td>1st Person</td><td>Ä«</td><td>imus</td>
+          <td>1st Person</td><td>ī</td><td>imus</td>
     </tr>
 <tr>
-          <td>2nd Person</td><td>istÄ«</td><td>istis</td>
+          <td>2nd Person</td><td>istī</td><td>istis</td>
     </tr>
 <tr>
-          <td>3rd Person</td><td>it</td><td>Ä“runt</td>
+          <td>3rd Person</td><td>it</td><td>ērunt</td>
     </tr>
 </table>
 
@@ -128,7 +128,7 @@
     </thead>
 
 <tr>
-          <td>1st Person</td><td>erÅ</td><td>erimus</td>
+          <td>1st Person</td><td>erō</td><td>erimus</td>
     </tr>
 <tr>
           <td>2nd Person</td><td>eris</td><td>eritis</td>
@@ -146,10 +146,10 @@
     </thead>
 
 <tr>
-          <td>1st Person</td><td>eram</td><td>erÄmus</td>
+          <td>1st Person</td><td>eram</td><td>erāmus</td>
     </tr>
 <tr>
-          <td>2nd Person</td><td>erÄs</td><td>erÄtis</td>
+          <td>2nd Person</td><td>erās</td><td>erātis</td>
     </tr>
 <tr>
           <td>3rd Person</td><td>erat</td><td>erant</td>
