--- a/principal_parts.html
+++ b/principal_parts.html
@@ -68,39 +68,40 @@
   <tbody>
     <tr>
       <td>1st Conjugation</td>
-      <td>Å</td>
-      <td>Äre</td>
-      <td>ÄvÄ«</td>
+      <td>ō</td>
+      <td>āre</td>
+      <td>āvī</td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>2nd Conjugation</td>
-      <td>Å</td>
-      <td>Ä“re</td>
-      <td>uÄ« <br><small>*often varies</small></td>
+      <td>ō</td>
+      <td>ēre</td>
+      <td>uī <br><small>*often varies</small></td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>3rd Conjugation</td>
-      <td>Å</td>
+      <td>ō</td>
       <td>ere</td>
-      <td>Ä« <br><small>*often varies</small></td>
+      <td>ī <br><small>*often varies</small></td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>4th Conjugation</td>
-      <td>Å</td>
-      <td>Ä«re</td>
-      <td>Ä«vÄ«</td>
+      <td>ō</td>
+      <td>īre</td>
+      <td>īvī</td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
         <td>Examples</td>
-        <td>amÅ: I love</td>
-        <td>amÄre: to love</td>
-        <td>amÄvÄ«: I loved</td>
-        <td>amÄtus: loved/having been loved/ was loved <br> <button onclick="location.href='p.p.help.html'">
-            <small><i>i</i></small></small></button></td>
+        <td>amō: I love</td>
+        <td>amāre: to love</td>
+        <td>amāvī: I loved</td>
+        <td>amātus: loved/having been loved/ was loved <br> 
+        <button onclick="location.href='p.p.help.html'">
+          <small><i>4th p.p. help</i></small></small></button></td>
     </tr>
   </tbody>
 </table>
