--- a/subjectpronouns.html
+++ b/subjectpronouns.html
@@ -80,42 +80,42 @@
     <tr>
       <td>Nominative</td>
       <td>ego</td>
-      <td>nÅs</td>
-      <td>tÅ«</td>
-      <td>vÅs</td>
-      <td>â€”</td>
+      <td>nōs</td>
+      <td>tū</td>
+      <td>vōs</td>
+      <td>—</td>
     </tr>
     <tr>
       <td>Genitive</td>
-      <td>meÄ«</td>
+      <td>meī</td>
       <td>nostrum</td>
-      <td>tuÄ«</td>
+      <td>tuī</td>
       <td>vestrum</td>
-      <td>suÄ«</td>
+      <td>suī</td>
     </tr>
     <tr>
       <td>Dative</td>
       <td>mihi</td>
-      <td>nÅbÄ«s</td>
+      <td>nōbīs</td>
       <td>tibi</td>
-      <td>vÅbÄ«s</td>
+      <td>vōbīs</td>
       <td>sibi</td>
     </tr>
     <tr>
       <td>Accusative</td>
-      <td>mÄ“</td>
-      <td>nÅs</td>
-      <td>tÄ“</td>
-      <td>vÅs</td>
-      <td>sÄ“</td>
+      <td>mē</td>
+      <td>nōs</td>
+      <td>tē</td>
+      <td>vōs</td>
+      <td>sē</td>
     </tr>
     <tr>
       <td>Ablative</td>
-      <td>mÄ“</td>
-      <td>nÅbÄ«s</td>
-      <td>tÄ“</td>
-      <td>vÅbÄ«s</td>
-      <td>sÄ“</td>
+      <td>mē</td>
+      <td>nōbīs</td>
+      <td>tē</td>
+      <td>vōbīs</td>
+      <td>sē</td>
     </tr>
   </tbody>
 </table>
