--- a/latintexts.html
+++ b/latintexts.html
@@ -58,7 +58,7 @@
 
     <form action="https://dcc.dickinson.edu/cicero-philippics/ii-44" method="post">
         <input type="image" src="https://dcc.dickinson.edu/sites/default/files/styles/frontpage_images/public/2021-01/Cicero%20Philippics%20cover%20image.jpg?itok=n2e5hHZG" alt="Submit" width="300" height="300">
-        <p><em>Cicero (Philippic 2.44â€“50, 78â€“92, 100â€“119)</em></p>
+        <p><em>Cicero (Philippic 2.44–50, 78–92, 100–119)</em></p>
     </form>  
     
     <form action="https://dcc.dickinson.edu/eutropius/breviarium-preface" method="post">
