--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 
   <footer style="text-align:center;padding:1rem 0;color:#666;">
     <small>Site served from this folder.</small>
+    <small>Citations: </small>
+    <small>
+      Crawford, D. L. Suburani: Book 1. Cambridge University Press, 2003.
+    </small>
+    <small>
+      Crawford, D. L. Suburani: Book 2. Cambridge University Press, 2003.
+    </small>
+    <small>
+      Crawford, D. L. Suburani: Book 3. Cambridge University Press, 2003.
+    </small>
   </footer>
 </body>
 </html>
